# test

./: .pre-commit-config.yaml  factory.py  main.py  polyfactory.py  pyproject.toml  test_main.py
.github/workflow/: ci.yml
app/: main.py
tests/: factory.py  test_main.py
